src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Portfolio_Management_Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Management Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PortfolioManagementApprover3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Case_Portfolio_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio_Valuation_Date_First_NAV__c</fullName>
        <formula>Actual_Funding_Date__c - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Valuation Date/First NAV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portfolio_s_Country_of_Domicile__c</fullName>
        <label>Portfolio&apos;s Country of Domicile</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_for_MFS_City__c</fullName>
        <label>Primary Contact for MFS City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_for_MFS_Country__c</fullName>
        <label>Primary Contact for MFS Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_for_MFS_Email__c</fullName>
        <label>Primary Contact for MFS Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_for_MFS_Fax__c</fullName>
        <label>Primary Contact for MFS Fax</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_for_MFS_Phone__c</fullName>
        <label>Primary Contact for MFS Phone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_for_MFS_Postal_Code__c</fullName>
        <label>Primary Contact for MFS Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_for_MFS_State__c</fullName>
        <label>Primary Contact for MFS State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_for_MFS_Street__c</fullName>
        <label>Primary Contact for MFS Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Principles_for_Responsible_Investment__c</fullName>
        <label>Principles for Responsible Investment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proxy_Voting__c</fullName>
        <label>Proxy Voting</label>
        <picklist>
            <picklistValues>
                <fullName>MFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custodian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QA_Loe__c</fullName>
        <description>Field used to capture QA level of estimate for enhancement</description>
        <label>QA Loe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualified_Institutional_Buyer__c</fullName>
        <label>Qualified Institutional Buyer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recordkeeper_or_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recordkeeper or Administrator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Recordkeeper or Administrator)</relationshipLabel>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_Case_Created_From__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp; Parent_Case_Id__c ,  Parent_Case_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Case__c</fullName>
        <formula>!ISBLANK(TEXT(Repeats__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Application__c</fullName>
        <label>Related Application</label>
        <picklist>
            <picklistValues>
                <fullName>C360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DST Sales Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_To_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to opportunity</description>
        <label>Related To Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager__c</fullName>
        <description>Note: check the workflow rule before making changes to this field: WF - &quot;Populate Case Contact Names&quot; and then remove this description as well.</description>
        <label>Relationship Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <description>Used for Expected release date on user support enhancement requests that have been approved.</description>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repeat_On_Weekly__c</fullName>
        <label>Repeat On</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repeat_On__c</fullName>
        <label>Repeat On</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repeats_On__c</fullName>
        <label>Repeats On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repeats__c</fullName>
        <label>Repeats</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Comments__c</fullName>
        <label>Reporting Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Currency__c</fullName>
        <label>Reporting Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other currency</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Name__c</fullName>
        <formula>Client_Investment__r.Reporting_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Requirements__c</fullName>
        <label>Reporting Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-standard</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <formula>Requester__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Phone__c</fullName>
        <formula>Requester__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Details__c</fullName>
        <label>Resolution Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Restricted_Brokers_Issuers_and_or_Socia__c</fullName>
        <inlineHelpText>Please provide any restrictions relating to the account of which MFS should be aware.</inlineHelpText>
        <label>Restricted Brokers, Issuers and/or SRI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SalesPerson__c</fullName>
        <description>Note: check the workflow rule before making changes to this field: WF - &quot;Populate Case Contact Names&quot; and then remove this description as well.</description>
        <label>SalesPerson</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Benchmark__c</fullName>
        <label>Secondary Benchmark</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Secondary Contact)</relationshipLabel>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sector_Scheme__c</fullName>
        <label>Sector Scheme</label>
        <picklist>
            <picklistValues>
                <fullName>MFSI Standard (13 Sectors)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GICS (11 Sectors)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Research (8 Sectors)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quant Sectors / Barra (14 Sectors)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sector Neutral – Industry schema used (N/A)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sample sector scheme</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selected_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Email__c</fullName>
        <label>Service Provider Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Provider Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Service Provider)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Org_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On Behalf Of</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (On Behalf Of)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Phone__c</fullName>
        <label>Service Provider Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Sub_Type__c</fullName>
        <label>Service Request Sub-Type</label>
        <picklist>
            <controllingField>Service_Request_Type__c</controllingField>
            <picklistValues>
                <fullName>Address Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting Change - 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting Change - 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting Change - 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name Change impacts Contract</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account Setup Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adhoc/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Allocation Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benchmark Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Inquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custodian/Record Keeper Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMA Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inflow/Outflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inv. Strategy Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inv. Strategy Guideline Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Entity Name Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Issue/Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group/List Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Enhancement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How-to/Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Share_Class__c</fullName>
        <label>Share Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sharepoint_Link__c</fullName>
        <description>Users will enter the link to the Sharepoint site where the onboarding case materials for review are stored.</description>
        <label>Sharepoint Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Special_Trading_Instructions__c</fullName>
        <label>Special Trading Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Day__c</fullName>
        <label>Start Day</label>
        <picklist>
            <controllingField>Start_Month__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Month__c</fullName>
        <label>Start Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Street_Lux__c</fullName>
        <label>State Street Lux</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stop_Buying_Date__c</fullName>
        <label>Stop Buying Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Sell_Date__c</fullName>
        <label>Stop Sell Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strategic_Alliance_Department_Heads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Alliance Department Heads</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>